alteracao do rgb

--- a/JogoVelha.html
+++ b/JogoVelha.html
@@ -43,7 +43,7 @@ ryan
         
         td{
             border-left:2px solid black;
-            border-top:2px solid black;
+            border-top:2px solid rgb(37, 24, 24);
         }
         .td_Direita{
             border-left:0px;
