--- a/JogoVelha.html
+++ b/JogoVelha.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-ryan
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -108,9 +107,10 @@ ryan
     </div>
 
     <div id="areaJS" onclick="FuncaoAviso()">
-        <p id="confirmacao">Preencha o formuário para realizar seu cadastro!</p>
+        <p id="confirmacao">Preencha o formuário para realizar seu cadastro! 
+        </p>
+        <p>  TO COM FOMEEEEEEEE</p>
     </div>
-
     <!--Relacionar o arquivo de scripts JavaScript-->
     <script>
         const dt = new Date().toLocaleString();
