correção linha 113 e título

--- a/JogoVelha.html
+++ b/JogoVelha.html
@@ -80,7 +80,9 @@
 
 <body onselectstart="return false" oncontextmenu="return false">
     <div>
-        <h2>Bem vindo ao nosso Jogo da Velha</h2>
+        <h2>Bem vindo ao nosso Jogo da Velha
+        </h2>
+         <B>Editado por Felipe Figueiró</B>
         <p id="data"></p>
     </div>
 
@@ -109,7 +111,6 @@
     <div id="areaJS" onclick="FuncaoAviso()">
         <p id="confirmacao">Preencha o formuário para realizar seu cadastro! 
         </p>
-        <p>  TO COM FOMEEEEEEEE</p>
     </div>
     <!--Relacionar o arquivo de scripts JavaScript-->
     <script>
